# M1-Zomato

./: .env.example  .gitignore  Dockerfile  README.md  app.py  dataset-contract.md  debug_hf.py  debug_streamlit_error.py  hf_api.py  package-lock.json  package.json  phase0-scope.md  pyproject.toml  quick_api.py  requirements-simple.txt  requirements-streamlit.txt  requirements.txt  robust_hf_api.py  run_api.py  simple_api.py  streamlit.toml  streamlit_app.py  test_api.py  test_filter_functionality.py  test_fixed_streamlit.py  test_hf_data.py  test_hf_integration.py  test_recommendations.py  test_simple_streamlit.py  test_standalone_app.py  test_standalone_streamlit.py  test_streamlit.py
.github/workflows/: deploy-streamlit.yml
.streamlit/: config.toml
docs/: github-actions-deployment.md  google-stitch-prompts.md  problemstatement.md  streamlit-deploy.md
docs/architecture/: backend-frontend-architecture.md  edge-cases.md  phase-wise-architecture.md
frontend/: README.md  index.html  package.json
frontend-nextjs/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend-nextjs/.next/: trace
frontend/src/: App.tsx
src/milestone1/: __init__.py  cli.py
src/milestone1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/fixtures/: restaurants_sample.json
tests/phase1/: test_hf_ingestion.py  test_normalization.py
tests/phase2/: test_preferences.py
tests/phase3/: test_integration.py
tests/phase4/: test_parser_and_fallback.py  test_service.py
tests/phase5/: test_recommend_run.py  test_renderer.py
(+106 files in other folders)
