[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "milestone1"
version = "0.1.0"
description = "AI-powered restaurant recommendation system foundations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["python-dotenv>=1.0.1"]

[project.optional-dependencies]
ingestion = ["datasets>=2.19.0"]
dev = ["pytest>=8.0.0"]
api = ["fastapi>=0.104.0", "uvicorn[standard]>=0.24.0", "pydantic>=2.4.0"]
llm = ["openai>=1.3.0"]

[project.scripts]
milestone1 = "milestone1.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "integration: marks tests that require external integrations",
]
testpaths = ["tests"]
